Fixed layout bugs

--- a/layout/_header.module.scss
+++ b/layout/_header.module.scss
@@ -5,13 +5,13 @@
   height: 8rem;
   // background-color: #eee;
   box-shadow: 1px 2px 4px #ececec;
-  padding: 0 7rem;
+  padding: 0 1.1rem;
   position: relative;
 }
 .title {
   display: flex;
   align-items: center;
-  transform: translateX(-7rem);
+  // transform: translateX(-7rem);
   & > span {
     display: flex;
     justify-content: center;
@@ -38,6 +38,7 @@
 .profileWrapper {
   display: flex;
   align-items: center;
+  margin-right: 2rem;
 }
 .notification {
   display: flex;
